--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
       <version>${r2dbc.version}</version>
     </dependency>
     <dependency>
+      <groupId>io.r2dbc</groupId>
+      <artifactId>r2dbc-client</artifactId>
+      <version>${r2dbc.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j.version}</version>
