--- a/pom.xml
+++ b/pom.xml
@@ -11,35 +11,53 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 
-    <!-- reactor -->
-    <reactor.version>3.2.3.RELEASE</reactor.version>
-
     <!-- spring -->
-    <spring.version>5.1.3.RELEASE</spring.version>
-    <spring-boot.version>2.1.1.RELEASE</spring-boot.version>
-    <spring-data.version>2.1.3.RELEASE</spring-data.version>
-    <spring-data-r2dbc.version>1.0.0.M1</spring-data-r2dbc.version>
-    <spring-data-jdbc.version>1.1.0.M1</spring-data-jdbc.version>
+    <spring.version>5.2.2.RELEASE</spring.version>
+    <spring-data-releasetrain.version>Moore-SR3</spring-data-releasetrain.version>
+    <spring-data-r2dbc.version>1.0.0.RELEASE</spring-data-r2dbc.version>
+    <spring-boot.version>2.2.2.RELEASE</spring-boot.version>
+    <spring-boot-r2dbc.version>0.1.0.M3</spring-boot-r2dbc.version>
 
     <!-- r2dbc -->
-    <r2dbc.version>1.0.0.M6</r2dbc.version>
+    <r2dbc.version>Arabba-RELEASE</r2dbc.version>
+
+    <!-- reactor -->
+    <reactor.version>Dysprosium-SR2</reactor.version>
 
     <!-- test -->
-    <slf4j.version>1.7.25</slf4j.version>
-    <junit5.platform.version>1.3.2</junit5.platform.version>
-    <junit5.jupiter.version>5.3.2</junit5.jupiter.version>
-    <junit5.vintage.version>5.3.2</junit5.vintage.version>
-    <mockito.version>2.23.4</mockito.version>
+    <junit5.version>5.5.2</junit5.version>
+    <slf4j.version>1.7.30</slf4j.version>
+    <mockito.version>3.2.4</mockito.version>
 
     <!-- database -->
-    <db.name>test_r2dbc</db.name>
     <db.host>localhost</db.host>
-    <db.username>test</db.username>
+    <db.name>testdb</db.name>
+    <db.username>tester</db.username>
     <db.password>password</db.password>
   </properties>
   <dependencyManagement>
     <dependencies>
-      <!-- spring -->
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>${junit5.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.projectreactor</groupId>
+        <artifactId>reactor-bom</artifactId>
+        <version>${reactor.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.r2dbc</groupId>
+        <artifactId>r2dbc-bom</artifactId>
+        <version>${r2dbc.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-framework-bom</artifactId>
@@ -47,7 +65,13 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <!-- spring boot -->
+      <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-releasetrain</artifactId>
+        <version>${spring-data-releasetrain.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
@@ -55,11 +79,17 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <!-- spring-data-jdbc -->
       <dependency>
         <groupId>org.springframework.data</groupId>
-        <artifactId>spring-data-jdbc</artifactId>
-        <version>${spring-data-jdbc.version}</version>
+        <artifactId>spring-data-r2dbc</artifactId>
+        <version>${spring-data-r2dbc.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot.experimental</groupId>
+        <artifactId>spring-boot-bom-r2dbc</artifactId>
+        <version>${spring-boot-r2dbc.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -67,18 +97,16 @@
     <dependency>
       <groupId>tech.simter</groupId>
       <artifactId>simter-r2dbc-ext</artifactId>
-      <version>1.1.1</version>
+      <version>1.3.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-r2dbc</artifactId>
-      <version>${spring-data-r2dbc.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-relational</artifactId>
-      <version>${spring-data-jdbc.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -87,7 +115,6 @@
     <dependency>
       <groupId>io.r2dbc</groupId>
       <artifactId>r2dbc-spi</artifactId>
-      <version>${r2dbc.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -110,7 +137,6 @@
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-test</artifactId>
-      <version>${reactor.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -127,20 +153,7 @@
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>${junit5.jupiter.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>${junit5.jupiter.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apiguardian</groupId>
-      <artifactId>apiguardian-api</artifactId>
-      <version>1.0.0</version>
+      <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -173,7 +186,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
+        <version>3.8.1</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
@@ -188,7 +201,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.1</version>
+        <version>2.22.2</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -219,13 +232,11 @@
         <dependency>
           <groupId>io.r2dbc</groupId>
           <artifactId>r2dbc-h2</artifactId>
-          <version>${r2dbc.version}</version>
           <scope>runtime</scope>
         </dependency>
         <dependency>
           <groupId>com.h2database</groupId>
           <artifactId>h2</artifactId>
-          <version>1.4.197</version>
           <scope>runtime</scope>
         </dependency>
       </dependencies>
@@ -243,7 +254,6 @@
         <dependency>
           <groupId>io.r2dbc</groupId>
           <artifactId>r2dbc-postgresql</artifactId>
-          <version>${r2dbc.version}</version>
           <scope>runtime</scope>
         </dependency>
       </dependencies>
@@ -261,7 +271,6 @@
         <dependency>
           <groupId>io.r2dbc</groupId>
           <artifactId>r2dbc-mssql</artifactId>
-          <version>${r2dbc.version}</version>
           <scope>runtime</scope>
         </dependency>
       </dependencies>
