--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,17 @@
     <mockito.version>3.2.4</mockito.version>
 
     <!-- database -->
+    <db.platform>none</db.platform>
     <db.host>localhost</db.host>
+    <db.port>~</db.port>
     <db.name>testdb</db.name>
     <db.username>tester</db.username>
     <db.password>password</db.password>
+    <db.url>~</db.url>
+    <db.protocol>~</db.protocol>
+    <db.driver-class>~</db.driver-class>
+    <db.init-mode>never</db.init-mode>
+    <db.continue-on-error>false</db.continue-on-error>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -97,7 +104,7 @@
     <dependency>
       <groupId>tech.simter</groupId>
       <artifactId>simter-r2dbc-ext</artifactId>
-      <version>1.3.0</version>
+      <version>1.4.0-M2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -221,7 +228,9 @@
       </activation>
       <properties>
         <db.platform>h2</db.platform>
-        <db.port>~</db.port>
+        <db.init-mode>embedded</db.init-mode>
+        <db.url>./target/testdb</db.url>
+        <db.protocol>mem</db.protocol>
       </properties>
       <dependencies>
         <dependency>
@@ -243,6 +252,7 @@
       </activation>
       <properties>
         <db.platform>postgres</db.platform>
+        <db.init-mode>never</db.init-mode>
         <db.port>5432</db.port>
       </properties>
       <dependencies>
@@ -260,6 +270,7 @@
       </activation>
       <properties>
         <db.platform>mssql</db.platform>
+        <db.init-mode>never</db.init-mode>
         <db.port>1234</db.port>
       </properties>
       <dependencies>
