--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,29 +1,35 @@
-spring:
-  main:
-    banner-mode: 'off'
-  datasource:
-    initialization-mode: always # embedded|always|never
-    url: ./target/@db.name@   # for h2
-    name: @db.name@           # database-name for postgres, mssql
-    port: @db.port@
-    username: @db.username@
-    password: @db.password@
-    schema: # available when initialization-mode=always
-      - classpath:sql/@db.platform@/schema.sql
+spring.test.database.replace: none
+spring.main.banner-mode: 'off'
+spring.datasource:
+  platform: @db.platform@
+  name: @db.name@
+  host: @db.host@
+  port: @db.port@
+  url: @db.url@
+  protocol: @db.protocol@
+  username: @db.username@
+  password: @db.password@
+  continue-on-error: @db.continue-on-error@
+  sql-script-encoding: UTF-8
+  initialization-mode: @db.init-mode@ # never|embedded|always
+  schema: # available when initialization-mode=always
+    - classpath:sql/@db.platform@/schema.sql
 logging:
   #file: target/test.log
   level: # one of TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
     root: ERROR
-    #---- simter ----#
-    tech.simter.r2dbc: DEBUG
     tech.simter.start.r2dbc: DEBUG
+    tech.simter.r2dbc: DEBUG # INFO - show execute sql and custom r2dbc converters, DEBUG - show R2dbcProperties
+    tech.simter.embeddeddatabase: INFO # INFO - Starting embedded database: url=..., DEBUG - Load script
 
-    #org.springframework: WARN
-    #org.springframework.boot: WARN
+    #---- r2dbc client ----#
+    org.springframework.data.r2dbc.core.DefaultDatabaseClient: DEBUG # DEBUG to show sql
+    #org.springframework.data.r2dbc.core.NamedParameterExpander: DEBUG # DEBUG to show sql
 
-    #---- r2dbc ----#
-    io.r2dbc: WARN
-    io.r2dbc.h2.client.SessionClient: DEBUG # DEBUG to show h2 request and Response
-    io.r2dbc.postgresql.client.ReactorNettyClient: DEBUG # DEBUG to show postgres request and Response
-    org.springframework.data.r2dbc: WARN
-    org.springframework.data.r2dbc.function.DefaultDatabaseClient: DEBUG # DEBUG to show sql
+    #---- r2dbc driver----#
+    #io.r2dbc.h2.client.SessionClient: DEBUG # DEBUG to show postgres request and Response
+    #io.r2dbc.postgresql.client.ReactorNettyClient: DEBUG # DEBUG to show postgres request and Response
+
+    #---- jdbc ----#
+    org.springframework.jdbc.datasource.embedded.EmbeddedDatabaseFactory: INFO # INFO - Starting embedded database: url='jdbc:h2:mem:...', username='sa'
+    org.springframework.jdbc.datasource.init.ScriptUtils: DEBUG # DEBUG - show executing SQL script file and result
