--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -18,11 +18,13 @@ logging:
   #file: target/test.log
   level: # one of TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
     root: ERROR
-    tech.simter.start.r2dbc: DEBUG
+    tech.simter.start.springdatar2dbc: DEBUG
     tech.simter.r2dbc: DEBUG # INFO - show execute sql and custom r2dbc converters, DEBUG - show R2dbcProperties
     tech.simter.embeddeddatabase: INFO # INFO - Starting embedded database: url=..., DEBUG - Load script
 
     #---- r2dbc client ----#
+    org.springframework.data.r2dbc: DEBUG
+    org.springframework.data.r2dbc.connectionfactory.init: DEBUG
     org.springframework.data.r2dbc.core.DefaultDatabaseClient: DEBUG # DEBUG to show sql
     #org.springframework.data.r2dbc.core.NamedParameterExpander: DEBUG # DEBUG to show sql
 
